[project]
name = "fastapi-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi>=0.128.8",
    "fastapi-users[sqlalchemy]>=14.0.2",
    "imagekitio>=5.2.0",
    "python-dotenv>=1.2.1",
    "streamlit>=1.50.0",
    "uvicorn[standard]>=0.39.0",
]
